client/.happypack/s-1977250760
SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (26:13)

[0m [90m 24 | [39m        socket[33m.[39memit([32m'user'[39m[33m,[39muserId)[33m;[39m
 [90m 25 | [39m      }
[31m[1m>[22m[39m[90m 26 | [39m      [36mreturn[39m([33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m)[33m;[39m
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 27 | [39m    }
 [90m 28 | [39m    [36melse[39m{
 [90m 29 | [39m      hashHistory[33m.[39mpush([32m'/'[39m)[33m;[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (26:13)

[0m [90m 24 | [39m        socket[33m.[39memit([32m'user'[39m[33m,[39muserId)[33m;[39m
 [90m 25 | [39m      }
[31m[1m>[22m[39m[90m 26 | [39m      [36mreturn[39m([33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m)[33m;[39m
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 27 | [39m    }
 [90m 28 | [39m    [36melse[39m{
 [90m 29 | [39m      hashHistory[33m.[39mpush([32m'/'[39m)[33m;[39m[0m

    at transpile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\index.js:52:13)
    at Object.module.exports (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\index.js:133:12)
    at applySyncOrAsync (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\applyLoaders.js:116:3)
    at HappyWorker.compile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyWorker.js:32:3)
    at Object.compile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyPlugin.js:320:25)
    at HappyPlugin.compile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyPlugin.js:236:32)
    at Object.HappyLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\happypack\lib\HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (C:\Users\Vincent\Desktop\wemeet\client\node_modules\webpack-core\lib\NormalModuleMixin.js:155:71)
    at runSyncOrAsync (C:\Users\Vincent\Desktop\wemeet\client\node_modules\webpack-core\lib\NormalModuleMixin.js:155:93)
    at nextLoader (C:\Users\Vincent\Desktop\wemeet\client\node_modules\webpack-core\lib\NormalModuleMixin.js:290:3)
    at C:\Users\Vincent\Desktop\wemeet\client\node_modules\webpack-core\lib\NormalModuleMixin.js:259:5
    at Storage.finished (C:\Users\Vincent\Desktop\wemeet\client\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:38:16)
    at C:\Users\Vincent\Desktop\wemeet\client\node_modules\graceful-fs\graceful-fs.js:78:16
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:445:3)